k8s-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outing-profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outing-profile-service
  template:
    metadata:
      labels:
        app: outing-profile-service
    spec:
      containers:
        - name: outing-profile-service
          image: nikaklimenchuk/outing-profile-service:v2.2
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: outing-profile-service
spec:
  selector:
    app: outing-profile-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30004
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30017   # 🔑 Expose Mongo on your local node
  type: NodePort        # 🔑 Makes it accessible from Compass


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service
          image: nikaklimenchuk/planeet-ui:react-v1.9.31
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: liorberlin/users-service:v3.4.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"

---

apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30002
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planning-service
  template:
    metadata:
      labels:
        app: planning-service
    spec:
      containers:
        - name: planning-service
          image: dartoledano/planning-service:v4.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: planning-service
spec:
  selector:
    app: planning-service
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30005
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venues-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: venues-service
  template:
    metadata:
      labels:
        app: venues-service
    spec:
      containers:
        - name: venues-service
          image: dartoledano/venues-service:v3.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: venues-service
spec:
  selector:
    app: venues-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30003
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: liorberlin/booking-service:v1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - name: http
      protocol: TCP
      port: 8004
      targetPort: 8004
      nodePort: 30006
  type: NodePort
